@@ -11,7 +11,13 @@ import org.dmg.pmml.VisitorAction;
 import org.jpmml.model.ReflectionUtil;
 
 /**
+ * <p>
  * A Visitor that interns String attribute values.
+ * </p>
+ *
+ * Strings are interned using the standard {@link String#intern()} method.
+ * If working with large class model objects, then it is advisable (for maximum performance) to configure the size of the string pool beforehand using JVM options <code>-XX:MaxPermSize</code> (Java 1.6) or <code>-XX:StringTableSize</code> (Java 1.7 and newer).
+ * For more information, see <a href="http://java-performance.info/string-intern-in-java-6-7-8/">String.intern in Java 6, 7 and 8 – string pooling</a>.
  */
 public class StringInterner extends AbstractSimpleVisitor {
 
